rbx_binary/src/tests/snapshots/rbx_binary__tests__util__two-ray-values__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed

---
- referent: referent-0
  name: "{1, 2, 3}, {-4, -5, -6}"
  class: RayValue
  properties:
    AttributesSerialize:
      BinaryString: ""
    SourceAssetId:
      Int64: -1
    Tags:
      BinaryString: ""
    Value:
      Ray:
        Origin:
          - 1.0
          - 2.0
          - 3.0
        Direction:
          - -4.0
          - -5.0
          - -6.0
  children: []
- referent: referent-1
  name: "{inf, -inf, nan}, {0.5, 0.15625, 0.1}"
  class: RayValue
  properties:
    AttributesSerialize:
      BinaryString: ""
    SourceAssetId:
      Int64: -1
    Tags:
      BinaryString: ""
    Value:
      Ray:
        Origin:
          - .inf
          - -.inf
          - .nan
        Direction:
          - 0.5
          - 0.15625
          - 0.10000000149011612
  children: []

